# RheoScale-calculator

./: Link to Python version of Rheoscale2.0  Link to python version of Rheoscale2.0  README.md  README_RheoScale_2.0_python_10Oct25.docx  RheoScale LacI data example 2018.xlsx  RheoScale R_script0727 2018.R  RheoScale for Big Data Sets 0730 2018 - Template.xltx  RheoScale for Big Data Sets_2.0_for publication 10-19.xlsx  RheoScale for Big Data Sets_2.0_for publication 11-18.xlsx  RheoScale for Big Data Sets_2.0_for publication 2-1.xlsx  RheoScale for Big Data Sets_2.0_for publication LOCKED.xlsx  RheoScale for Small Data Sets 0730 2018 - Template.xltx  RheoScale for Small Data Sets_2.0_for publication 10-19.xlsx  RheoScale for Small Data Sets_2.0_for publication 11-18.xlsx  RheoScale for Small Data Sets_2.0_for publication 2-1.xlsx  RheoScale for Small Data Sets_2.0_for publication LOCKED.xlsx  RheoScale2.0 for Big Data Sets 11Feb2026.xlsx  RheoScale2.0 for Big Data Sets 12March2026.xlsx  RheoScale2.0 for Big Data Sets 14March2026.xlsx  RheoScale2.0 for Small Data Sets 11Feb2026.xlsx  RheoScale2.0 for Small Data Sets 12Mar2026.xlsx  RheoScale_2.0_10Oct25_for_publication.py  pyproject.toml
Number of variants versus position assignment/: Analysis description
PLpro HTP RheoScale 2.0 examples/: PLpro ABUNDANCE RheoScale2.0 11Feb2026.xlsx  PLpro ACTIVITY positions extracted for manual inspection RheoScale2.0 11Feb2026..xlsx  PLpro INHIBITOR RheoScale2.0 11Feb2026.xlsx  PLpro INHIBITOR positions extracted for manual inspection RheoScale2.0 11Feb2026.xlsx
rheoscale/: cli.py  (+6 more)
(+488 files in other folders)
