[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rheoscale"
version = "0.1.6"
description = "RheoScale implementation for DMS analysis"
authors = [{ name = "Carter Gray, Liskin Swint-Kruse" }]
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "matplotlib"]

[project.scripts]
rheoscale = "rheoscale.cli:main"

[tool.setuptools.packages.find]
include = ["rheoscale*"]
